# ai-gamestudio

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.en.md  README.md  README.zh.md  REVIEW.md  docker-compose.postgres.yml  docker-compose.yml  mise.toml  progress.md  pyproject.toml  requirements.txt  vercel.json
backend/app/: main.py
backend/tests/: conftest.py  constants.py  test_access_key_websocket.py  test_api_chat_command.py  test_api_llm_security.py  test_api_plugin_import.py  test_api_projects.py  test_api_runtime_settings.py  test_api_sessions_messages.py  test_api_templates.py  test_archive_service.py  test_audit_fixes.py  test_audit_logger.py  test_block_handlers.py  test_block_handlers_declarative.py  test_capability_executor.py  test_chat_debug_log_cleanup.py  test_chat_output_contract.py  test_chat_service.py  test_codex_api.py  test_compress_service.py  test_event_bus.py  test_force_trigger_handler.py  test_guide_output_filter.py  test_image_payload_parser.py  test_llm_call_storage.py  test_llm_config.py  test_llm_gateway.py  test_manifest_integration.py  test_manifest_loader.py  test_plugin_agent_hooks.py  test_plugin_agent_prompt_i18n.py  test_plugin_hooks.py  (+11 more)
docs/: ARCHITECTURE.md  PLUGIN-ECOSYSTEM-ARCHITECTURE.md  PLUGIN-SPEC-v2.md  PLUGIN-SPEC.md  PRD.md  TECH-STACK.md  WORLD-SPEC.md
frontend/: .env.example  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.test.json  vite.config.ts
scripts/: kill_port.py  test_image_generation_format.py  test_litellm_rpg.py  test_llm_config.py  test_plugin_agent.py
(+315 files in other folders)
